--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-var": "^1.1.0",
     "dotenv-cli": "^7.2.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.3",
